# Robot-Simulation

./: README.md
src/differential/: CMakeLists.txt  package.xml
src/differential/config/: waypoints_config.yaml  waypoints_mine.yaml
src/differential/config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/differential/launch/: lcmine_husky_world.launch  move_base.launch  rtabmap_3d_slam.launch  waypoint_navigation.launch
src/differential/model/: model.sdf
src/differential/model/differential/: model.config  model.sdf
src/differential/rviz/: waypoint_navigation.rviz
src/differential/scripts/: waypoint_navigator_yaml.py  waypoint_recorder.py
src/differential/urdf_xacro/: husky.urdf.xacro  husky_gazebo.urdf.xacro
src/robot_metrics/: CMakeLists.txt  package.xml
src/robot_metrics/launch/: metrics_logger.launch
src/robot_metrics/scripts/: analyze_metrics.py  metrics_logger.py
src/rocker_bogie/: CMakeLists.txt  package.xml
src/rocker_bogie/config/: display.rviz  waypoints_config.yaml
src/rocker_bogie/config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/rocker_bogie/launch/: lcmine_rocker_bogie_world.launch  move_base.launch  rtabmap_3d_slam.launch  waypoint_navigation.launch
src/rocker_bogie/meshes/: AcopleRB_1_1.stl  AcopleRB_2_1.stl  AcopleTubo135_1_1.stl  AcopleTubo135_2_1.stl  AcopleTubo90_1_1.stl  AcopleTubo90__2_1.stl  AcopleTuboRB_1_1.stl  AcopleTuboRB_2_1.stl  Acople_Rodamiento_1_1.stl  Acople_Rodamiento_2_1.stl  ApoyoServomotor_1_1.stl  ApoyoServomotor_2_1.stl  ApoyoServomotor_3_1.stl  ApoyoServomotor_4_1.stl  BarraAcople1_1.stl  BarraAcople2_1.stl  BarraAcople3_1.stl  BarraAcople4_1.stl  BarraAcople5_1.stl  BarraAcople6_1.stl  BarraBR_1_1.stl  BarraBR_2_1.stl  BarraRuedas_1_1.stl  BarraRuedas_2_1.stl  BarraRuedas_3_1.stl  BarraRuedas_4_1.stl  BarraRuedas_5_1.stl  BarraRuedas_6_1.stl  Barra_Acople_R_1_1.stl  Barra_Acople_R_2_1.stl  Barra_acople_1_1.stl  Barra_acople_2_1.stl  Motor_1_1.stl  Motor_2_1.stl  Motor_3_1.stl  Motor_4_1.stl  Motor_5_1.stl  Motor_6_1.stl  Rueda_1_1.stl  Rueda_2_1.stl  (+11 more)
src/rocker_bogie/model/rocker_bogie/: model.config  model.sdf
src/rocker_bogie/scripts/: twist_to_wheels.py  waypoint_navigator_yaml.py  waypoint_recorder.py  wheel_odom.py
src/rocker_bogie/urdf/: ensamblajeurdf.gazebo  ensamblajeurdf.trans  ensamblajeurdf.xacro  materials.xacro
src/rocker_bogie/world/mine/: lcmine.world
src/rocker_bogie/world/mine/lc_mine/: model.sdf
src/rocker_bogie/world/mine/smaze_wall/: model.sdf
(+2 files in other folders)
