<?xml version="1.0"?>
<package format="2">
  <name>rocker_bogie</name>
  <version>0.0.0</version>
  <description>The rocker_bogie package - 6-wheel rocker-bogie robot for mine navigation comparison</description>

  <maintainer email="alessandro@todo.todo">alessandro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <!-- move_base navigation stack -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/model" />
  </export>
</package>
